--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     </head>
     <body>
         <div id = "opening">
-            <div id="name">
-                Yodahe Alemu
-                <div id = "name-underline"></div>
-            </div>
-            <div id="reverse-name">
-                Yodahe Alemu
+            <div id = "header-container">
+                <div id="name">
+                    Yodahe Alemu
+                </div>
                 <div id = "reverse-name-underline"></div>
+                <div id = "name-underline"></div>
+                <div id="reverse-name">
+                    Yodahe Alemu
+                </div>
             </div>
         </div>
         <div id = "content">
